add postgresql url

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -35,12 +35,12 @@ application.langs="en"
 # ~~~~~
 
 db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgresql://localhost:5432"
+db.default.url="postgres://aeqzpkdqlmxvyr:Xt7_cpbBy65GIH23G9YyGuYMSv@ec2-54-83-205-164.compute-1.amazonaws.com:5432/df52a8qae8g30"
 db.default.jndiName=DefaultDS
 db.default.logStatements=true
 jpa.default=defaultPersistenceUnit
-db.default.user="vladislavposashkov"
-db.default.password=""
+# db.default.user="aeqzpkdqlmxvyr"
+# db.default.password="Xt7_cpbBy65GIH23G9YyGuYMSv"
 
 # Evolutions
 # ~~~~~
